Fixed layout issue @ Equipment Dashboard

--- a/Public/Styles/EquipmentDashboard/index.less
+++ b/Public/Styles/EquipmentDashboard/index.less
@@ -74,7 +74,7 @@ ul.pagination {
 }
 
 .item-action {
-    min-width: 190px;
+    min-width: 168px;
 }
 .panel-title{
     font-size: 1em;
